--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,14 @@
   </head>
 
   <body>
-  <h1>You made it!</h1>
+  <% if current_teacher %>
+    <h1>You made it! <%= current_teacher.email if current_teacher %></h1>
+    <h1>Can you see this</h1>
+    <%= link_to "Sign Out", destroy_teacher_session_path, method: :delete %>
+  <% else %>
+    <%= link_to "Sign In", new_teacher_session_path %>
+
+  <% end %>
     <%= yield %>
   </body>
 </html>
