--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,3 +9,23 @@ body {
 h1 {
 	color: white;
 }
+
+#navbar {
+	display: block;
+	background: #98F5FF;
+	box-shadow: 0 10px 1px #53868B;
+	height: 42px;
+	margin-bottom: 5px;
+	width: auto;
+	min-width: 960px;
+}
+
+.topnav1 {
+	float: right;
+	list-style: none;
+	display: block;
+	width: auto;
+	height: 42px;
+	margin: 0;
+	padding: 0;
+}
