--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,19 @@
   </head>
 
   <body>
+    <div id="wrapper">
+      <div id="navbar">
+        <ul class="topnav1">
   <% if current_teacher %>
-    <h1>You made it! <%= current_teacher.email if current_teacher %></h1>
-    <h1>Can you see this</h1>
-    <%= link_to "Sign Out", destroy_teacher_session_path, method: :delete %>
+    <li>Welcome <%= current_teacher.email if current_teacher %></li>
+    <li><%= link_to "Sign Out", destroy_teacher_session_path, method: :delete %>
   <% else %>
-    <%= link_to "Sign In", new_teacher_session_path %>
+    <%= link_to "Sign In", new_teacher_session_path %></li>
+  <% end %> 
+        </ul>
 
-  <% end %>
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
