--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,12 @@
     <%= link_to "Sign In", new_teacher_session_path %></li>
   <% end %> 
         </ul>
-
+        <a href="/" id="logo"></a>
+        <ul class="topnav2">
+          <li>Classes</li>
+          <li>Messages</li>
+          <li>Account</li>
+        </ul>
       </div>
     </div>
     <%= yield %>
