--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,15 +10,17 @@ body {
 h1 {
 	color: white;
 }
+/*top navigation styling */
 
 #navbar {
 	display: block;
-	background: #98F5FF;
-	box-shadow: 0 10px 1px #53868B;
+	background: #FFEC8B;
+	box-shadow: 0 2px 1px #53868B;
 	height: 42px;
 	margin-bottom: 5px;
 	width: auto;
 	min-width: 960px;
+	border-radius: 4px;
 }
 
 .topnav1 {
@@ -27,7 +29,7 @@ h1 {
 	display: block;
 	width: auto;
 	height: 42px;
-	margin: 0;
+	margin: 10px 10px 0;
 	padding: 0;
 }
 
@@ -52,6 +54,6 @@ h1 {
 	display: list-item;
 	float: left;
 	position: relative;
-	margin-right: 40px;
+	margin: 10px 40px 0;
 	z-index: 10;
 }
