--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,11 @@
 <h1> It's the home page!</h1>
 <h1>Soon this will be a great LMS....I hope</h1>
 <br>
+<H1 class="main_title" style="text-align: center;">Title Coming Soon</H1>
+<img class="main_logo" src="#" />
+ 
+<div id="signup"> 
+<h1 id="buttons_h1"><a class="btn_link" href="/users/new">Signup</a></h1>
+ 
+<h1 id="buttons_h1"><%= link_to "Login", new_teacher_session_path %></h1>
+</div>
