--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
   <head>
     <title>LMS</title>
     <%= csrf_meta_tags %>
-
+    <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -19,7 +20,7 @@
     <%= link_to "Sign In", new_teacher_session_path %></li>
   <% end %> 
         </ul>
-        <a href="/" id="logo"></a>
+        <a href="/" id="logo">GradEZ</a>
         <ul class="topnav2">
           <li>Classes</li>
           <li>Messages</li>
