--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,23 @@
-<h1> It's the home page!</h1>
-<h1>Soon this will be a great LMS....I hope</h1>
-<br>
-<H1 class="main_title" style="text-align: center;">Title Coming Soon</H1>
-<img class="main_logo" src="#" />
- 
-<div id="signup"> 
-<h1 id="buttons_h1"><a class="btn_link" href="/users/new">Signup</a></h1>
- 
-<h1 id="buttons_h1"><%= link_to "Login", new_teacher_session_path %></h1>
+<div class="jumbotron">
+	<div class="container">
+	<h1 id="jumbo">GradEZ</h1>
+		<h1 id="jumbo1">Online Grading Made Simple</h1>
+	</div>
+</div> 
+<div class="supporting">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 text-center">
+				<h2>Teachers</h2>
+				<a href="/teachers/sign_up" class="btn">Go</a>
+			</div>
+			<div class="col-md-6 text-center">
+				<h2>Students</h2>
+				<a href="/students/sign_up" class="btn">Go</a>
+			</div>
+		</div>
+
+
+
+	</div>
 </div>
