--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,10 +77,17 @@ h1 {
 	font-family: 'Questrial', sans-serif;
 	font-size: 148px;
 	text-shadow: 2px 2px black;
+  	animation:pulse 1.0s infinite alternate;
+}
+
+@-webkit-keyframes pulse {
+  from { text-shadow: 2px 2px 10px #E0FFFF; }
+  to { text-shadow: 2px 2px 28px #00FFFF; }
 }
 #jumbo1 {
 	color:white;
 	font-family: 'Questrial', sans-serif;
+	text-shadow: 2px 2px black;
 }
 
 .supporting h2{
