--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@ h1 {
 	display: block;
 	background: #00BFFF;
 	box-shadow: 0 2px 1px #6495ED;
-	height: 42px;
+	height: 52px;
 	margin-bottom: 0px;
 	width: auto;
 	min-width: 960px;
@@ -72,6 +72,7 @@ h1 {
 	margin-bottom: 0;
 	margin-top: 0;
 }
+
 #jumbo 	{
 	color: white;
 	font-family: 'Questrial', sans-serif;
@@ -119,11 +120,27 @@ h1 {
 	color: red;
 	text-decoration: none;
 }
-.btn_link<a:hover {
+.btn_link>a:hover {
     text-decoration: underline;
 }
 #buttons_h1 {
 	color: red;
 	font-family: Arial;
 	text-shadow: 1px 1px black;
+}
+ /* Footer Area */
+
+.copy {
+	padding-top: 10px;
+}
+
+.pull-right {
+	float: right!important;
+}
+
+/*teacher pages*/
+
+.teach {
+	font-family: 'Questrial', sans-serif;
+	font-size: 20px;
 }
