--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,5 +25,8 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+<hr/>
+<p> Already have a Teacher account?</p>
+  <div class="nav nav-pills">
+    <li><%= render "devise/shared/links" %></li>
+  </div>
