--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,1 +1,7 @@
 <h2 class="teach">Add a new class to your account:</h2>
+
+<%= form_for @course do |f| %>
+  <%= f.label :Course_name %><br>
+  <%= f.text_area :name %><br>
+  <%= f.submit "Create" %>
+<% end %>
