more_class_functionality

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -144,6 +144,10 @@ h1 {
 
 /*teacher pages*/
 
+.info_area {
+	height: 500px;
+}
+
 .teach {
 	font-family: 'Questrial', sans-serif;
 	font-size: 20px;
