--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<div class="info_area">
+<h2 class="teach">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -36,7 +37,8 @@
   </div>
 <% end %>
 <hr/>
-<p> Already have a Teacher account?</p>
+<p class="teach"> Already have a Teacher account?</p>
   <div class="nav nav-pills">
-    <li><%= render "devise/shared/links" %></li>
+    <li class="teach"><%= render "devise/shared/links" %></li>
   </div>
+</div>
