--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,11 +1,9 @@
 <H1>"New Course"</H1>
 
-<table class="table">
-    <tbody>
-      <tr>
-        <td> <%= @course.name %></td>
-      </tr>
-    </tbody>
-  </table>
+<%= form_for @course do |f|%>
+	<%= f.text_field :name %>
+	<%= f.submit "Create Course" %>
+
+<% end %>
 
 <p><%= link_to "Back to List", courses_path %></p>
