--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <a href="/" id="logo">GradEZ</a>
         <% if current_teacher %>
         <ul class="topnav2">
-          <li><a href="/courses/show">Classes</a></li>
+          <li><a href="/courses/">Courses</a></li>
           <li><a href="/teachers/edit">Account</a></li>
         </ul>
         <% end %>
