--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,5 +1,5 @@
 <div class="info_area">
-<h2 class="teach">Add a new class to your account:</h2>
+<h2 class="teach">Add a new course to your account:</h2>
 
 <%= form_for @course do |f| %>
   <%= f.label :course_name %><br>
